# DS-QM_diff

./: .gitignore  README.md  pyproject.toml
model-diffing/model_diffing/analysis/: cc_analysis.ipynb  gen_math_datsets.ipynb
model-diffing/model_diffing/data/: token_hookpoint_dataloader.py
model-diffing/model_diffing/scripts/: config_common.py  llms.py
model-diffing/model_diffing/scripts/train_jan_update_crosscoder/: example_config.yaml
model-diffing/model_diffing/scripts/train_topk_crosscoder/: example_config.yaml  run.py
