[project]
name = "crosscoders-feature-interactions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "circuitsvis>=1.43.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pip>=25.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
